[feature] create an assembly [bugfix] fixed the Maven compilation